kubernetes/booking-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-db
  template:
    metadata:
      labels:
        app: booking-db
    spec:
      containers:
        - name: booking-db
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
