kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx  # <-- Add this line
  rules:
    - host: adensial
      http:
        paths:
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /event(/|$)(.*)
            pathType:  ImplementationSpecific
            backend:
              service:
                name: event-service
                port:
                  number: 5000
          - path: /booking(/|$)(.*)
            pathType:  ImplementationSpecific
            backend:
              service:
                name: booking-service
                port:
                  number: 5003
          - path: /notification(/|$)(.*)
            pathType:  ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 5004
